--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: wah_firebase
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -59,6 +59,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/logo.png
   # fonts:
   #   - family: Schyler
   #     fonts:
